--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json -p 8000"
+    "server": "json-server --watch data/cities.json -p 8000 -d 500"
   },
   "dependencies": {
-    "json-server": "^1.0.0-alpha.23",
+    "json-server": "0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
